# culqi-api-python

./: .env.template  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.dev.txt  requirements.tox.txt  requirements.txt  setup.cfg  setup.py  tbump.toml  tox.ini
culqi/: __init__.py  client.py
culqi/resources/: base.py  token.py
culqi/utils/: urls.py
docs/: Culqi API Python - Documentación.ipynb  Culqi API Python - Documentation.md
tests/: data.py  test_card.py  test_charge.py  test_client.py  test_customer.py  test_event.py  test_iin.py  test_order.py  test_plan.py  test_refund.py  test_subscription.py  test_token.py  test_transfer.py
tests/cassettes/: CardTest.test_card_create.yaml  CardTest.test_card_create__contact_issuer__master_card.yaml  CardTest.test_card_create__fraudulent__diners_club.yaml  CardTest.test_card_create__incorrect_cvv__master_card.yaml  CardTest.test_card_create__insufficient_funds__visa.yaml  CardTest.test_card_create__invalid_card__diners_club.yaml  CardTest.test_card_create__issuer_decline_operation__american_express.yaml  CardTest.test_card_create__issuer_not_available__american_express.yaml  CardTest.test_card_create__lost_card__visa.yaml  CardTest.test_card_create__processing_error__diners_club.yaml  CardTest.test_card_create__stolen_card__visa.yaml  CardTest.test_card_create__successful__american_express.yaml  CardTest.test_card_create__successful__diners_club.yaml  CardTest.test_card_create__successful__master_card.yaml  CardTest.test_card_create__successful__visa.yaml  CardTest.test_card_delete.yaml  CardTest.test_card_list.yaml  CardTest.test_card_retrieve.yaml  CardTest.test_card_update.yaml  ChargeTest.test_charge_capture.yaml  ChargeTest.test_charge_create.yaml  ChargeTest.test_charge_create__contact_issuer__master_card.yaml  ChargeTest.test_charge_create__incorrect_cvv__master_card.yaml  ChargeTest.test_charge_create__insufficient_funds__visa.yaml  ChargeTest.test_charge_create__invalid_card__diners_club.yaml  ChargeTest.test_charge_create__issuer_decline_operation__american_express.yaml  ChargeTest.test_charge_create__issuer_not_available__american_express.yaml  ChargeTest.test_charge_create__lost_card__visa.yaml  ChargeTest.test_charge_create__processing_error__diners_club.yaml  ChargeTest.test_charge_create__stolen_card__visa.yaml  ChargeTest.test_charge_create__successful__american_express.yaml  ChargeTest.test_charge_create__successful__diners_club.yaml  ChargeTest.test_charge_create__successful__master_card.yaml  ChargeTest.test_charge_create__successful__visa.yaml  ChargeTest.test_charge_delete.yaml  ChargeTest.test_charge_list.yaml  ChargeTest.test_charge_retrieve.yaml  ChargeTest.test_charge_update.yaml  CustomerTest.test_customer_create.yaml  CustomerTest.test_customer_delete.yaml  (+45 more)
