[tool.poetry]
name = "culqi"
version = "1.0.0"
description = 'Biblioteca de Culqi en Python'
authors = ["zodiacfireworks <martin.vuelta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^3.2.0"
requests = "^2.22"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
black = "^20.8b1"
codecov = "^2.0"
coverage = "^5.0"
flake8 = "^3.7"
flake8-black = "^0.2.1"
jupyterlab = "^3.0.9"
mypy = "^0.812"
pre-commit = "^2.10.1"
pydocstyle = "^5.0"
pylint = "^2.4"
pytest = "^6.2.2"
pytest-cov = "^2.8"
pytest-vcr = "^1.0"
python-dotenv = "^0.15.0"
tox = "^3.14"
twine = "^3.1"

[tool.black]
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |legacy
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
