[tool.poetry]
name = "culqi-api-python"
version = "1.0.1"
description = 'Biblioteca de Culqi en Python'
authors = [
  "SoftButterfly Development Team <dev@softbutterfly.io>",
  "zodiacfireworks <martin.vuelta@gmail.com>"
]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/softbutterfly/culqi-api-python"
repository = "https://github.com/softbutterfly/culqi-api-python"
documentation = "https://github.com/softbutterfly/culqi-api-python/wiki"
keywords = ["Softbutterfly", "Culqi", "Culqi API"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "culqi" }
]
include = [
  "LICENSE.txt",
  "CHANGELOG.md",
]

[tool.poetry.urls]
"Download" = "https://github.com/softbutterfly/culqi-api-python/archive/1.0.1.tar.gz"
"Bug Tracker" = "https://github.com/softbutterfly/culqi-api-python/issues"

[tool.poetry.dependencies]
python = ">= 3.6, < 4.0.0"
jsonschema = "^3.2.0"
requests = "^2.22"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
black = "^20.8b1"
codecov = "^2.0"
coverage = "^5.0"
flake8 = "^3.7"
flake8-black = "^0.2.1"
jupyterlab = "^3.0.9"
mypy = "^0.812"
pre-commit = "^2.10.1"
pydocstyle = "^5.0"
pylint = "^2.4"
pytest = "^6.2.2"
pytest-cov = "^2.8"
pytest-vcr = "^1.0"
python-dotenv = "^0.15.0"
tox = "^3.14"
twine = "^3.1"

[tool.black]
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |legacy
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
