[tool.poetry]
name = "culqi-api-python"
version = "1.0.1"
description = 'Biblioteca de Culqi en Python'
authors = [
  "SoftButterfly Development Team <dev@softbutterfly.io>",
  "zodiacfireworks <martin.vuelta@gmail.com>"
]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/softbutterfly/culqi-api-python"
repository = "https://github.com/softbutterfly/culqi-api-python"
documentation = "https://github.com/softbutterfly/culqi-api-python/wiki"
keywords = ["Softbutterfly", "Culqi", "Culqi API"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "culqi" }
]
include = [
  "LICENSE.txt",
  "CHANGELOG.md",
]

[tool.poetry.urls]
"Download" = "https://github.com/softbutterfly/culqi-api-python/archive/1.0.1.tar.gz"
"Bug Tracker" = "https://github.com/softbutterfly/culqi-api-python/issues"

[tool.poetry.dependencies]
python = ">= 3.7, < 4.0.0"
jsonschema = "^4.4.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.3.0"
codecov = "^2.1.12"
coverage = "^6.3.2"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
jupyterlab = "^3.3.4"
mypy = "^0.950"
pre-commit = "^2.18.1"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
pylint = "^2.13.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-vcr = "^1.0.2"
python-dotenv = "^0.20.0"
tbump = "^6.8.0"
tox = "^3.25.0"
twine = "^4.0.0"
types-requests = "^2.27.25"

[tool.black]
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |legacy
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
